# desafio-twitter

./: README.md  pyproject.toml
Desafio-API-TWITTER/: Dockerfile  docker-compose.yml  main.py  requirements.txt
Desafio-API-TWITTER/src/: connection.py  dashboards.py  relatorios.py  services.py
